fixing table text alignment

--- a/assets/_scss/figure.scss
+++ b/assets/_scss/figure.scss
@@ -8,7 +8,6 @@ figure {
   margin-bottom: 0.5em;
   border-left: 5px solid #eee;
   border-right: 5px solid #eee;
-  display: table;
   
   img {
     margin-bottom: 0.5em
@@ -27,7 +26,7 @@ figure.table {
   border-right: 5px solid #eee;
   display: table;
   
-  .table{
+  figcaption.table {
     padding: 10px 20px;
     text-align: center;
     margin-left: auto;
@@ -36,8 +35,13 @@ figure.table {
     margin-bottom: 0.5em;
   }
 
-  img {
-    margin-bottom: 0.5em
+  table.table {
+    padding: 10px 20px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.9em;
+    margin-bottom: 0.5em;
   }
 }
 
